# jc-nes

./: .gitignore  Cargo.toml  LICENSE  README.md  canvas.js  handlers.js  index.js  jc_nes.js  jc_nes_bg.wasm  keys.js  roms.js
.github/workflows/: deploy-web.yml  main.yml
core/: README.md
core/src/: nes.rs
core/src/cartridge/: mod.rs
core/src/cartridge/mappers/: mapper000.rs  mapper001.rs  mapper002.rs  mapper003.rs  mod.rs
core/src/ppu/: mod.rs
desktop/: Cargo.toml  README.md
desktop/src/: main.rs
docs/: BUS.md  CPU.md  PPU.md  README.md  cpu.md
examples/: README.md  sdl.rs
examples/desktop/: Cargo.toml  README.md
examples/desktop/src/: main.rs
frontends/android/: README.md
frontends/desktop/src/: main.rs
frontends/web/: README.md
jc-nes/: Cargo.toml  README.md
jc-nes-desktop/: Cargo.toml  README.md
jc-nes-desktop/src/: main.rs
jc-nes-web/: Cargo.toml  README.md
jc-nes-web/site/: canvas.js  handlers.js  index.css  index.html  index.js  jc_nes.js  jc_nes_bg.wasm  keys.js  roms.js
jc-nes-web/src/: main.rs
jc-nes/src/: bus.rs  device.rs  gamepad.rs  lib.rs  nes.rs  ram.rs
jc-nes/src/cartridge/: mod.rs
jc-nes/src/cartridge/mappers/: mapper000.rs  mapper003.rs  mod.rs
jc-nes/src/cpu/: addressing.rs  bus.rs  instructions.rs  mod.rs  status.rs
jc-nes/src/ppu/: bus.rs  dma.rs  mod.rs  oam.rs  palette.rs  vram_address.rs
public/roms/: Donkey Kong.nes
roms/: cpu.logs  mylogs.txt  test.py  test_load.nes
src/: README.md  bus.rs  cartridge.rs  controller.rs  cpu.rs  gamepad.rs  lib.rs  main.rs  nametable.rs  nes.rs  palette.rs  pattern_mem.rs  ppu.rs  ram.rs
src/cartridge/: mod.rs
src/cartridge/mappers/: mapper000.rs  mapper003.rs  mod.rs
src/cpu/: addressing.rs  instructions.rs  mod.rs  opcodes.rs  tests.rs
src/mappers/: mapper0.rs  mapper000.rs  mod.rs
src/ppu/: address.rs  control.rs  dac.rs  dma.rs  mask.rs  mod.rs  nametable.rs  oam.rs  palette.rs  status.rs  vram_address.rs
src/tests/: mod.rs
