[package]
name = "jc-nes"
version = "0.1.0"
authors = ["João Dias Conde Azevedo <joaodiasconde@gmail.com>"]
edition = "2018"

[dependencies.bitflags]
version = "1.2.1"

[dependencies.sdl2]
version = "0.34.3"
features = ["bundled", "static-link"]
git = "https://github.com/joao-conde/rust-sdl2"

[profile.release]
debug = false
lto = true
opt-level = 3
