[package]
name = "jc-nes-desktop"
version = "1.0.0"
authors = ["João Conde <joaodiasconde@gmail.com>"]
edition = "2018"
description = "NES Desktop Emulator in Rust"
license = "MIT"
keywords = ["NES", "emulator", "rust", "sdl"]

[dependencies.jc-nes]
path = "../jc-nes"

[dependencies.sdl2]
version = "0.35"
features = ["bundled"]

[profile.release]
lto = true
debug = false
opt-level = 3
