[package]
name = "desktop"
version = "1.0.0"
authors = ["João Conde <joaodiasconde@gmail.com>"]
edition = "2018"
description = "NES Emulator Desktop Application"
license = "MIT"

[dependencies.sdl2]
version = "0.34.4"
features = ["bundled", "static-link"]

[dependencies.jc-nes]
path = "../.."

[profile.release]
debug = false
lto = true
opt-level = 3
