[package]
name = "desktop"
version = "1.0.0"
authors = ["João Conde <joaodiasconde@gmail.com>"]
edition = "2018"
description = "NES Emulator Desktop Application"
license = "MIT"

[dependencies.jc-nes]
path = "../../jc-nes"

[dependencies.sdl2]
version = "0.34.5"
features = ["bundled", "static-link"]

[profile.release]
debug = false
lto = true
opt-level = 3
